fix spacing

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -49,7 +49,7 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   margin: 2%;
-  font-size: 3vh;
+  font-size: 3.5vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -104,7 +104,7 @@ body {
 }
 
 .score {
-  font-size: 2vh;
+  font-size: 2.5vh;
   text-align: center;
   margin: 2%;
   margin-top: 3%;
@@ -120,7 +120,7 @@ body {
 }
 
 .notify {
-  font-size: 3vh;
+  font-size: 5vh;
 }
 
 .button-container {
